
	Fix name normalization bug in mlocarna.in
	(Version 1.6.1)
Mar, 2011
	Doxygen compiles without warning and produces useful documentation
	of the library

	Vienna RNA library is now required for compilation and will be linked

	Locarna accepts clustal files as input and then computes base pair
	probabilities via pf_fold of the Vienna RNA lib. Currently this is
	limited to single sequence clustal files.
	Implement reading of mfasta files (still switched off).

Apr, 2011
	Implement several alignment comparison measures (and use in locarna_deviation) (EXPERIMENTAL)

	Make linking to Vienna librna configurable, default=off! Activate
	by calling ./configure with --enable-librna.

	New strategy for consensus dot plot generation: employ RNAalifold
	-p.  Enable via mlocarna's option --alifold-consensus-dp Note: the
	default consensus dot plot computation seems to be flawed! The new
	tool pp2dot allows to visualize consensus dot plots (by converting
	pp to Vienna-like dot plot postscript files) and should help to
	improve the default strategy (otherwise we are going to replace
	it!)

	mlocarna accepts via --tree-file a super-tree as guide tree and
	automatically projects to the taxa in the input.

	Allow quotation in newick trees (using Text::ParseWords)
	and use quotations when generating newick trees

May, 2011
	Fix a problem with compiling on case-insensitive file systems (generate 	locarna.bin instead of locarna executable in src, rename at install)

	add alifold-consensus-dp option for mlocarna

Aug, 2011: Add code for 'locarna_X'

Sep, 2011: Adding Exparna-P code for "in loop" probabilities

Oct, 2011: pre-release 1.6.2

Nov, 2011:
	Add mlocarna option to run specified binaries in place of locarna
	and locarna_p. This can be used to plug in compatible programs
	like carna

	Bug fix; compilation without linking libRNA was broken.
	release (1.6.2)

Dec, 2011
	Bug-fixes: treefile regexp, LARGE_PF name clash mit Vienna package
	(1.6.2.1)