@@ -296,3 +296,5 @@ Nov, 2011:
 Dec, 2011
 	Bug-fixes: treefile regexp, LARGE_PF name clash mit Vienna package
 	(1.6.2.1)
+	add script to translate to normalized names for mlocarna
+	
